--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -399,43 +399,4 @@ workflows:
   node-android-ios:
     jobs:
       - build
-      - e2e-ios:
-          # requires:
-            # - build
-      # - alpha-android:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         ignore:
-      #           - master
-      # - alpha-ios:
-      #     filters:
-      #       branches:
-      #         ignore:
-      #           - master
-      # - beta-android:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-      # - beta-ios:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-      # - release-android:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-      # - release-ios:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-
+      - e2e-ios
