add react native haptic feedback;

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -223,6 +223,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':react-native-haptic-feedback')
     implementation project(':lottie-react-native')
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-linear-gradient')
