--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postversion": "react-native-version --reset-build"
   },
   "dependencies": {
+    "bugsnag-react-native": "^2.9.3",
     "contentful": "^5.0.5",
     "date-fns": "^1.29.0",
     "lottie-react-native": "2.3.2",
