--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -241,6 +241,7 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
         transitive = true
     }
+    implementation project(':bugsnag-react-native')
 }
 
 // Run this once to be able to run the application with BUCK
