--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
       <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="@string/GOOGLE_MAPS_API_KEY" />
+      <meta-data
+        android:name="com.bugsnag.android.API_KEY"
+        android:value="@string/BUGSNAG_API_KEY" />
      </application>
 
 </manifest>
