--- a/ios/PrideLondonApp/Info.plist
+++ b/ios/PrideLondonApp/Info.plist
@@ -9,7 +9,7 @@
 		<string>waze</string>
 	</array>
 	<key>LSApplicationCategoryType</key>
-	<string/>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -33,7 +33,7 @@
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
-		<string/>
+		<string>__RN_CONFIG_FABRIC_API_KEY</string>
 		<key>Kits</key>
 		<array>
 			<dict>
@@ -60,7 +60,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
