--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,8 +192,8 @@ release-api-keys: &release-api-keys
   run:
     name: Set release API keys
     command: |
-      export CONTENTFUL_SPACE_ID=$RELEASE_CONTENTFUL_SPACE_ID
-      export CONTENTFUL_API_KEY=$RELEASE_CONTENTFUL_API_KEY
+      export CONTENTFUL_SPACE_ID=$RELEASE_CONTENTFUL_SPACE_ID &&
+      export CONTENTFUL_API_KEY=$RELEASE_CONTENTFUL_API_KEY &&
       export GOOGLE_MAPS_API_KEY=$RELEASE_GOOGLE_MAPS_API_KEY
 
 version: 2
@@ -236,6 +236,7 @@ jobs:
       <<: *env-docker
       APK_PATH: "./app/build/outputs/apk/alpha/release/app-alpha-release.apk"
     steps:
+      - <<: *release-api-keys
       - <<: *checkout-docker
       - <<: *workspace-docker
       - <<: *android-secrets
@@ -321,6 +322,7 @@ jobs:
     environment:
       <<: *env-macos
     steps:
+      - <<: *release-api-keys
       - <<: *checkout-macos
       - <<: *set-ruby-version-macos
       # Not using a workspace here as Node and Yarn versions
