--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,9 +192,10 @@ release-api-keys: &release-api-keys
   run:
     name: Set release API keys
     command: |
-      export CONTENTFUL_SPACE_ID=$RELEASE_CONTENTFUL_SPACE_ID
-      export CONTENTFUL_API_KEY=$RELEASE_CONTENTFUL_API_KEY
-      export GOOGLE_MAPS_API_KEY=$RELEASE_GOOGLE_MAPS_API_KEY
+      echo 'export CONTENTFUL_SPACE_ID=$RELEASE_CONTENTFUL_SPACE_ID' >> $BASH_ENV
+      echo 'export CONTENTFUL_API_KEY=$RELEASE_CONTENTFUL_API_KEY' >> $BASH_ENV
+      echo 'export GOOGLE_MAPS_API_KEY=$RELEASE_GOOGLE_MAPS_API_KEY' >> $BASH_ENV
+      source $BASH_ENV
 
 version: 2
 jobs:
@@ -246,6 +247,7 @@ jobs:
       - <<: *restore-gradle-cache
       - <<: *android-dependencies
       - <<: *save-gradle-cache
+      - <<: *release-api-keys
       - <<: *generate-env
       - run:
             command: |
@@ -333,6 +335,7 @@ jobs:
       - <<: *get-yarn-cache-macos
       - <<: *yarn-dependencies-macos
       - <<: *save-yarn-cache-macos
+      - <<: *release-api-keys
       - <<: *generate-env-macos
       - run:
             command: |
