run react-native-git-upgrade

--- a/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
+++ b/ios/PrideLondonApp.xcodeproj/xcshareddata/xcschemes/PrideLondonApp.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Pride in LDN.app"
+               BuildableName = "PrideLondonApp.app"
                BlueprintName = "PrideLondonApp"
                ReferencedContainer = "container:PrideLondonApp.xcodeproj">
             </BuildableReference>
@@ -54,7 +54,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -72,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pride in LDN.app"
+            BuildableName = "PrideLondonApp.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
@@ -84,7 +83,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -96,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pride in LDN.app"
+            BuildableName = "PrideLondonApp.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
@@ -122,7 +120,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Pride in LDN.app"
+            BuildableName = "PrideLondonApp.app"
             BlueprintName = "PrideLondonApp"
             ReferencedContainer = "container:PrideLondonApp.xcodeproj">
          </BuildableReference>
