--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bugsnag-react-native": "^2.9.3",
     "contentful": "^5.0.5",
+    "core-js": "^2.5.6",
     "date-fns": "^1.29.0",
     "lottie-react-native": "2.3.2",
     "ramda": "^0.25.0",
