run all unit tests in UTC

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "run-ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "run-android":
       "node node_modules/react-native/local-cli/cli.js run-android --appId org.prideinlondon.festival.dev --variant devDebug",
-    "test": "TZ=UTC-1 jest src --maxWorkers=2",
+    "test": "TZ=UTC jest src --maxWorkers=2",
     "test:e2e": "yarn test:e2e:build && yarn test:e2e:run",
     "test:e2e:dev":
       "detox test -c ios.sim.debug --reuse --loglevel verbose --debug-synchronization 1000",
