--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "glow": "^1.2.2",
     "husky": "^0.14.3",
     "jest": "22.2.2",
+    "jest-each": "^0.5.0",
     "lint-staged": "^6.0.0",
     "lorem-ipsum": "^1.0.4",
     "markdown-toc": "^1.2.0",
